--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -3,15 +3,28 @@
         <span class="hipster img-fluid rounded"></span>
     </div>
     <div class="col-md-9">
-        <h1 class="display-4">Train Xing</h1>
-        <p class="lead">Current Situation</p>
+        <h1 class="display-4">Welcome, Java Hipster!</h1>
+        <p class="lead">This is your homepage</p>
 
+        <div [ngSwitch]="isAuthenticated()">
+            <div class="alert alert-success" *ngSwitchCase="true">
+                <span *ngIf="account"
+                   > You are logged in as user "{{account.login}}". </span>
+            </div>
+
+            <div class="alert alert-warning" *ngSwitchCase="false">
+                <span>If you want to </span>
+                <a class="alert-link" (click)="login()">sign in</a><span>, you can try the default accounts:<br/>- Administrator (login="admin" and password="admin") <br/>- User (login="user" and password="user").</span>
+            </div>
+            <div class="alert alert-warning" *ngSwitchCase="false">
+                <span>You don't have an account yet?</span>
+                <a class="alert-link" routerLink="register">Register a new account</a>
+            </div>
+        </div>
 
         <p>
-            A level crossing is an intersection where a railway line crosses a
-            road or path at the same level,[1] as opposed to the railway line crossing over or under using a bridge or tunnel.
+            If you have any question on JHipster:
         </p>
-
 
         <ul>
             <li><a href="http://www.jhipster.tech/" target="_blank" rel="noopener">JHipster homepage</a></li>
@@ -22,8 +35,7 @@
         </ul>
 
         <p>
-            <span>If you like JHipster, don't forget to give us a star on</span>
-            <a href="https://github.com/jhipster/generator-jhipster" target="_blank" rel="noopener">GitHub</a>!
+            <span>If you like JHipster, don't forget to give us a star on</span> <a href="https://github.com/jhipster/generator-jhipster" target="_blank" rel="noopener">GitHub</a>!
         </p>
     </div>
 </div>
