--- a/src/main/webapp/app/home/home.css
+++ b/src/main/webapp/app/home/home.css
@@ -10,6 +10,23 @@ Main page styles
     background-size: contain;
 }
 
+.saint-andrew {
+    display: inline-block;
+    width: 347px;
+    height: 497px;
+    background: url("../../content/images/trainLevelCrossing.jpg") no-repeat center top;
+    background-size: contain;
+}
+
+.solution{
+    display: inline-block;
+    width: 423px;
+    height: 497px;
+    background: url("../../content/images/TrainXing.png") no-repeat;
+    background-size: contain;
+}
+
+
 /* wait autoprefixer update to allow simple generation of high pixel density media query */
 @media
 only screen and (-webkit-min-device-pixel-ratio: 2),
